--- a/pcs.html
+++ b/pcs.html
@@ -206,7 +206,7 @@
 </td>
 
   <div class="container" data-aos="fade-up">
-    <td style="vertical-align: top;">
+    <td style="vertical-align: top;" rowspan=3>
       <button onclick="openModal()" style="background:#f44336;">Place Order</button></td></tr>
       <tr><td><div class="cart"><h6>Your Cart</h6></div></td></tr>
       <tr><td><div><p id="total-price">Total: $0</p></div></td></tr>
@@ -559,6 +559,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
