--- a/pcs.html
+++ b/pcs.html
@@ -147,7 +147,7 @@
 
 <table style="border: 1px solid black; position: relative; top: 100px;">
 <tr>
-<td style="border: 1px solid black;"><div class="container" data-aos="fade-up">  
+<td style="border: 1px solid black;"><div class="container" data-aos="fade-up" rowspan="3">  
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
         <h6>Dell OptiPlex Desktop</h6>
@@ -204,13 +204,13 @@
     </div>
   </div>
 </td>
-
-  <div class="container" data-aos="fade-up">
-    <td rowspan="3">
-      <button onclick="openModal()" style="background:#f44336;">Place Order</button></td></tr>
-      <tr><td><div class="cart"><h6>Your Cart</h6></div></td></tr>
-      <tr><td><div><p id="total-price">Total: $0</p></div></td></tr>
-      <tr><td><div id="cart-items"></div></td></tr>
+  
+ <td class="products"> <div class="container" data-aos="fade-up">
+      <button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td>
+      <tr><td><div class="cart"><h6>Your Cart</h6></div></td><
+      <tr><td><div><p id="total-price">Total: $0</p></div></td>
+      <tr><td><div id="cart-items"></div></td>
+      </tr>
   </div>
 </table>
   
@@ -559,6 +559,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
