--- a/pcs.html
+++ b/pcs.html
@@ -147,7 +147,7 @@
 
 <table style="border: 1px solid black; position: relative; top: 100px;">
 <tr>
-<td style="border: 1px solid black;"><div class="container" data-aos="fade-up" rowspan="3">  
+<td style="border: 1px solid black;" rowspan="3"><div class="container" data-aos="fade-up">  
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
         <h6>Dell OptiPlex Desktop</h6>
@@ -559,6 +559,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
