--- a/pcs.html
+++ b/pcs.html
@@ -208,8 +208,8 @@
  <td class="products"> <div class="container" data-aos="fade-up">
       <button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td>
       <tr><td><div class="cart"><h6>Your Cart</h6></div></td>
-      <tr><td><div><p id="total-price">Total: $0</p></div></td>
-      
+      <tr><td><div><p id="total-price">Total: $0</p></div>
+      <div id="cart-items"></div></td>
 </tr>
 </table>
   
@@ -558,6 +558,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
