--- a/pcs.html
+++ b/pcs.html
@@ -145,9 +145,9 @@
     </div>
   </header><!-- End Header -->
 
-<table style="border: 1px solid black; position: relative; top: 100px; width: 100%;">
+<table style="border: 1px solid black; position: relative; top: 100px;">
 <tr>
-<td style="border: 1px solid black;" rowspan="3"><div class="container" data-aos="fade-up">  
+<td style="border: 1px solid black; width: 80%;" rowspan="3"><div class="container" data-aos="fade-up">  
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
         <h6>Dell OptiPlex Desktop</h6>
@@ -205,7 +205,7 @@
   </div>
 </td>
   
- <td class="products" style="width: 10%;"> <div class="container" data-aos="fade-up">
+ <td class="products" style="width: 20%;"> <div class="container" data-aos="fade-up">
       <button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td>
       <tr><td><div class="cart"><h6>Your Cart</h6></div></td>
       <tr><td><div><p id="total-price">Total: $0</p></div>
@@ -558,6 +558,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
