--- a/pcs.html
+++ b/pcs.html
@@ -205,7 +205,7 @@
   </div>
 </td>
   
- <td class="products" style="width: 20%;"> <div class="container" data-aos="fade-up">
+ <td class="products"> <div class="container" data-aos="fade-up">
       <button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td>
       <tr><td><div class="cart"><h6>Your Cart</h6></div></td>
       <tr><td><div><p id="total-price">Total: $0</p></div>
@@ -558,6 +558,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
