--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
               <li><a class="nav-link  " href="blog.html">Blog</a></li>
               <li class="dropdown"><a href="#"><span>Reports</span> <i class="bi bi-chevron-down"></i></a>
                 <ul>
-                  <li><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeblfi8cw7ZNmUC2kvPTFUSyz4iswD6pM-7twdp4DoBk3wWbA/viewform?vc=0&c=0&w=1&flr=0">Customer Complaint Registration</a></li>
+                  <li><a target="_blank" href="">Customer Complaint Registration</a></li>
                   <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
-                      <li><a href="https://docs.google.com/spreadsheets/d/1-2pzIelBK0w8bEAm3XMmyC3zK9fkhlsrONJ2Rqxb9nQ/edit" target="_blank">Deep Drop Down 1</a></li>
+                      <li><a href="">Deep Drop Down 1</a></li>
                       <li><a href="dailylog.html">Daily Logsheet</a></li>
                       <li><a href="#">Deep Drop Down 3</a></li>
                       <li><a href="#">Deep Drop Down 4</a></li>
@@ -97,7 +97,7 @@
               <div class="container">
                 <h2 class="animate__animated animate__fadeInDown">We are professionals</h2>
                 <p class="animate__animated animate__fadeInUp"></p>
-                <a href="order.html" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
             </div>
           </div>
@@ -756,6 +756,7 @@
 </body>
 
 </html>
+
 
 
 
