--- a/pcs.html
+++ b/pcs.html
@@ -145,7 +145,7 @@
     </div>
   </header><!-- End Header -->
 
-<table style="border: 1px solid black; position: relative; top: 100px;  width: 100%;">
+<table style="border: 1px solid black; position: absolute; top: 100px;  width: 100%;">
 <tr>
 <td style="border: 1px solid black; width: 80%;" rowspan="3"><div class="container" data-aos="fade-up">  
     <div class="product">
@@ -558,6 +558,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
