--- a/pcs.html
+++ b/pcs.html
@@ -145,7 +145,7 @@
     </div>
   </header><!-- End Header -->
 
-<table style="border: 1px solid black; position: absolute; top: 100px;  width: 100%;">
+<table style="border: 1px solid black; position: relative; top: 100px;  width: 100%;">
 <tr>
 <td style="border: 1px solid black; width: 80%;" rowspan="3"><div class="container" data-aos="fade-up">  
     <div class="product">
@@ -211,7 +211,7 @@
       <tr><td><div><p id="total-price">Total: $0</p></div></tr>
       <div id="cart-items"></div></td>
 </tr>
-</table>
+<tr><td>
   
 <!------------------------------->
 <!-- Modal -->
@@ -553,11 +553,13 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+</td></tr></table>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
