--- a/pcs.html
+++ b/pcs.html
@@ -145,9 +145,7 @@
     </div>
   </header><!-- End Header -->
 
-<table style="border: 1px solid black; position: relative; top: 100px;  width: 100%;">
-<tr>
-<td style="border: 1px solid black; width: 80%;" rowspan="3"><div class="container" data-aos="fade-up">  
+<div class="container" data-aos="fade-up">  
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
         <h6>Dell OptiPlex Desktop</h6>
@@ -203,15 +201,11 @@
         <button onclick="addToCart('Dell Pro Max Micro Desktop', 1100)">Add to Cart</button>
     </div>
   </div>
-</td>
-  
- <td class="products" colspan="2"> <div class="container" data-aos="fade-up">
-      <button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td>
-      <td><div class="cart"><h6>Your Cart</h6></div></td>
-      <tr><td><div><p id="total-price">Total: $0</p></div></tr>
-      <div id="cart-items"></div></td>
-</tr>
-<tr><td>
+ <div class="container" data-aos="fade-up">
+      <button onclick="openModal()" style="background:#f44336;">Place Order</button></div>
+      <div class="cart"><h6>Your Cart</h6></div>
+      <div><p id="total-price">Total: $0</p></div>
+      <div id="cart-items"></div>
   
 <!------------------------------->
 <!-- Modal -->
@@ -553,12 +547,13 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-</td></tr></table>
+
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
