--- a/pcs.html
+++ b/pcs.html
@@ -145,7 +145,7 @@
     </div>
   </header><!-- End Header -->
 
-<div class="products" data-aos="fade-up">  
+<div class="container" data-aos="fade-up">  
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
         <h6>Dell OptiPlex Desktop</h6>
@@ -553,6 +553,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
