--- a/pcs.html
+++ b/pcs.html
@@ -145,44 +145,44 @@
     </div>
   </header><!-- End Header -->
 
-<div class="" data-aos="fade-up">  
+<div class="products" data-aos="fade-up">  
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
         <h6>Dell OptiPlex Desktop</h6>
         <p>Price: $600</p>
         <button onclick="addToCart('Dell OptiPlex Desktop', 600)">Add to Cart</button>
     </div>
-    <div class="product">
+    <div class="prod uct">
       <img src="assets/img/desktop-pro-qcm1250-micro-black-gallery-1.avif" width="100px">
         <h6>Dell Pro Micro Desktop</h6>
         <p>Price: $750</p>
         <button onclick="addToCart('Dell Pro Micro Desktop', 750)">Add to Cart</button>
     </div>
-    <div class="product">
+    <div class="prod uct">
       <img src="assets/img/desktop-dell-pro-max-fcs1250-slim-odd-gallery-1.avif" width="100px">
         <h6>Dell Slim Desktop</h6>
         <p>Price: $600</p>
         <button onclick="addToCart('Dell Slim Desktop', 600)">Add to Cart</button>
     </div>
-    <div class="product">
+    <div class="prod uct">
       <img src="assets/img/desktop-tower-ect1250-c-no-ssd-black-gallery-1.avif" width="100px">
         <h6>Dell Tower Desktop</h6>
         <p>Price: $850</p>
         <button onclick="addToCart('Dell Tower Desktop', 850)">Add to Cart</button>
     </div>
-    <div class="product">
+    <div class="prod uct">
       <img src="assets/img/desktop-tower-ebt2250-c-gray-gallery-1.avif" width="100px">
         <h6>Dell Tower Plus Desktop</h6>
         <p>Price: $1000</p>
         <button onclick="addToCart('Dell Tower Plus Desktop', 1000)">Add to Cart</button>
     </div>
-    <div class="product">
+    <div class="pro duct">
       <img src="assets/img/desktop-dell-pro-max-fcs1250-slim-odd-gallery-1.avif" width="100px">
         <h6>Dell Pro Max Slim Desktop</h6>
         <p>Price: $1100</p>
         <button onclick="addToCart('Dell Pro Max Slim Desktop', 1100)">Add to Cart</button>
     </div>
-    <div class="product">
+    <div class="pro duct">
       <img src="assets/img/desktop-dell-pro-max-fcm1253-micro-bk-gallery-1.avif" width="200px">
         <h6>Dell Pro Max With GB10 Desktop</h6>
         <p>Price: $4500</p>
@@ -194,7 +194,7 @@
         <p>Price: $1100</p>
         <button onclick="addToCart('Dell Pro Slim Plus Desktop', 1100)">Add to Cart</button>
     </div>
-    <div class="product">
+    <div class="pro duct">
       <img src="assets/img/desktop-dell-pro-max-fcm2250-micro-bk-gallery-1.avif" width="100px">
         <h6>Dell Pro Max Micro Desktop</h6>
         <p>Price: $1100</p>
@@ -553,6 +553,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
