--- a/pcs.html
+++ b/pcs.html
@@ -145,7 +145,7 @@
     </div>
   </header><!-- End Header -->
 
-<div class="products" data-aos="fade-up">  
+<div class="products" data-aos="fade-up" sytle="margin-top:100px;">  
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
         <h6>Dell OptiPlex Desktop</h6>
@@ -303,7 +303,7 @@
             email: document.getElementById('email').value,
             phone: document.getElementById('phone').value,
             address: document.getElementById('address').value,*/
-            message: `Name:${cname}\nAddress:${addr}\nEmail:${email}\nPhone:${phone}\nOrder Details:\n${items}\nTotal: $${total}`
+            message: `Name: ${cname}\nAddress: ${addr}\nEmail: ${email}\nPhone: ${phone}\nOrder Details: \n${items}\nTotal: $${total}`
         };
 
         emailjs.send('service_0yrxbss', 'template_m8q2b8s', templateParams)
@@ -553,6 +553,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
