--- a/pcs.html
+++ b/pcs.html
@@ -52,7 +52,7 @@
         flex-wrap: wrap;
         top: 300px;
         justify-content: center;
-        margin: 0px;
+        margin-top: 125px;
     }
     .product, .cart-item {
         background: white;
@@ -553,6 +553,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
