--- a/pcs.html
+++ b/pcs.html
@@ -145,59 +145,72 @@
     </div>
   </header><!-- End Header -->
 
+  
+function displayCart() {
+        const cartItems = document.getElementById('cart-items');
+        const totalPriceEl = document.getElementById('total-price');
+        cartItems.innerHTML = '';
+        let total = 0;
+
+        totalPriceEl.innerText = `Total: $${total}`;
+   }
+
+
+<!--------------------------------------------------------------------------->
+  
 <div class="products" data-aos="fade-up" sytle="margin-top:500px;">  
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
         <h6>Dell OptiPlex Desktop</h6>
-        <p>Price: $600</p>
+        <p>Price: Rs:2600</p>
         <button onclick="addToCart('Dell OptiPlex Desktop', 600)">Add to Cart</button>
     </div>
     <div class="product">
       <img src="assets/img/desktop-pro-qcm1250-micro-black-gallery-1.avif" width="100px">
         <h6>Dell Pro Micro Desktop</h6>
-        <p>Price: $750</p>
+        <p>Price: Rs:2750</p>
         <button onclick="addToCart('Dell Pro Micro Desktop', 750)">Add to Cart</button>
     </div>
     <div class="product">
       <img src="assets/img/desktop-dell-pro-max-fcs1250-slim-odd-gallery-1.avif" width="100px">
         <h6>Dell Slim Desktop</h6>
-        <p>Price: $600</p>
+        <p>Price: Rs:600</p>
         <button onclick="addToCart('Dell Slim Desktop', 600)">Add to Cart</button>
     </div>
     <div class="product">
       <img src="assets/img/desktop-tower-ect1250-c-no-ssd-black-gallery-1.avif" width="100px">
         <h6>Dell Tower Desktop</h6>
-        <p>Price: $850</p>
+        <p>Price: Rs:2850</p>
         <button onclick="addToCart('Dell Tower Desktop', 850)">Add to Cart</button>
     </div>
     <div class="product">
       <img src="assets/img/desktop-tower-ebt2250-c-gray-gallery-1.avif" width="100px">
         <h6>Dell Tower Plus Desktop</h6>
-        <p>Price: $1000</p>
+        <p>Price: Rs:21000</p>
         <button onclick="addToCart('Dell Tower Plus Desktop', 1000)">Add to Cart</button>
     </div>
     <div class="product">
       <img src="assets/img/desktop-dell-pro-max-fcs1250-slim-odd-gallery-1.avif" width="100px">
         <h6>Dell Pro Max Slim Desktop</h6>
-        <p>Price: $1100</p>
+        <p>Price: Rs:21100</p>
         <button onclick="addToCart('Dell Pro Max Slim Desktop', 1100)">Add to Cart</button>
     </div>
     <div class="product">
       <img src="assets/img/desktop-dell-pro-max-fcm1253-micro-bk-gallery-1.avif" width="200px">
         <h6>Dell Pro Max With GB10 Desktop</h6>
-        <p>Price: $4500</p>
+        <p>Price: Rs:34500</p>
         <button onclick="addToCart('Dell Pro Max With GB10 Desktop', 4500)">Add to Cart</button>
     </div>
     <div class="product">
       <img src="assets/img/desktop-dell-pro-qbs1250-slim-plus-odd-gallery-1.avif" width="100px">
         <h6>Dell Pro Slim Plus Desktop</h6>
-        <p>Price: $1100</p>
+        <p>Price: Rs:31100</p>
         <button onclick="addToCart('Dell Pro Slim Plus Desktop', 1100)">Add to Cart</button>
     </div>
     <div class="product">
       <img src="assets/img/desktop-dell-pro-max-fcm2250-micro-bk-gallery-1.avif" width="100px">
         <h6>Dell Pro Max Micro Desktop</h6>
-        <p>Price: $1100</p>
+        <p>Price: Rs:41100</p>
         <button onclick="addToCart('Dell Pro Max Micro Desktop', 1100)">Add to Cart</button>
     </div>
   </div>
@@ -553,6 +566,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
