--- a/pcs.html
+++ b/pcs.html
@@ -245,7 +245,7 @@
   </div>
 
 
-      <div id="panel" style="position: absolute; margin-top: 100px; margin-left: 5%%; margin-top:0;">
+      <div id="panel" style="position: absolute; margin-left: 5%%; margin-top:0px;">
       <div id="cart-items"></div>
       </div>
 
@@ -623,6 +623,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
