--- a/pcs.html
+++ b/pcs.html
@@ -205,7 +205,7 @@
 <!---------------------------Cart Container--------------------------------->
 
       <div id="panel">
-      <table style="border: 2px solid #ddd; background: gray; width: 250px; position: absolute; margin-left: 5%%;">
+      <table style="border: 2px solid #ddd; background: gray; width: 200px; position: absolute; margin-left: 5%%; margin-top:5%">
         <thead ><td><h3 align="justify-content-center">Your Cart</h3></td></thead><tr>
         <td>
         
@@ -657,3 +657,4 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
