--- a/pcs.html
+++ b/pcs.html
@@ -509,10 +509,10 @@
 
       function myFunction() {
       var x = document.getElementById("panel");
-      if (x.style.display === "block") {
-        x.style.display = "none";
-      } else {
+      if (x.style.display === "none") {
         x.style.display = "block";
+      } else {
+        x.style.display = "none";
       }
     }
 
@@ -757,4 +757,5 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
