--- a/pcs.html
+++ b/pcs.html
@@ -129,7 +129,7 @@
         background: white;
         cursor: auto;
         border: 2px solid #ddd;
-        display: none;
+        display: block;
         margin-top: 100px;
         position:absolute;
         z-index: 9;
@@ -757,5 +757,6 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
