--- a/pcs.html
+++ b/pcs.html
@@ -297,7 +297,7 @@
 <!---------------------------Cart Container--------------------------------->
 
       <div id="panel">
-       <table width="245px;"><tr><td> <h5 align="justify-content-center">🛒Your Cart</h5></td><td style="align:top;"><h6 onclick="myFunction()"  class="mp" style="margin-right: 20%;">❌</h6></td></tr></table>
+       <table width="245px;"><tr><td> <p align="justify-content-center">🛒Your Cart</p></td><td style="align:top;"><p onclick="myFunction()"  class="mp" style="margin-right: 20%;">❌</p></td></tr></table>
         <p id="total-price" style="font-size: 15px; font-weight:bold;">Total: $0</p>
         
         <ul id="cart-items">
@@ -757,6 +757,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
